@@ -1,3 +1,10 @@
+2004-12-19  Bruno Haible  <bruno@clisp.org>
+
+	* modules/wildcard/wildcard.lisp: Define package as case-inverted.
+
+	* modules/regexp/regexp.lisp: Modernize package declaration. Improve
+	indentation.
+
 2004-12-18  Bruno Haible  <bruno@clisp.org>
 
 	* places.lisp (get-setf-method, push, pop, psetf, pushnew, remf,
